Corrected error in overflow from earlier change

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,10 @@
 body, html {
     height: 100%;
     margin: 0 auto;
-    overflow: scroll;
+}
+
+html {
+  overflow-y: scroll;
 }
 
 body {
